Fixes and improvements

--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -24345,4 +24345,8 @@ msgctxt "#40436"
 msgid "50th Anniversary Edition"
 msgstr ""
 
+msgctxt "#40437"
+msgid "Listing media files"
+msgstr ""
+
 # 40000 to 40800 are reserved for Video Versions feature
