--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -14191,7 +14191,12 @@ msgctxt "#20474"
 msgid "HDR type"
 msgstr ""
 
-#empty strings from id 20475 to 21329
+#: xbmc/video/VideoInfoScanner.cpp
+msgctxt "#20475"
+msgid "Listing media files"
+msgstr ""
+
+#empty strings from id 20476 to 21329
 #up to 21329 is reserved for the video db !! !
 
 #: system/settings/settings.xml
@@ -24343,10 +24348,6 @@ msgstr ""
 #: xbmc/video/VideoDatabase.cpp
 msgctxt "#40436"
 msgid "50th Anniversary Edition"
-msgstr ""
-
-msgctxt "#40437"
-msgid "Listing media files"
 msgstr ""
 
 # 40000 to 40800 are reserved for Video Versions feature
